Se realizaron cambios en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -11,5 +11,9 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore dolorem velit, harum adipisci, delectus ad laboriosam similique suscipit, eaque quibusdam possimus dolores molestias reprehenderit. Incidunt magni libero quibusdam officia sapiente?
     </p>
+    <h1>Avances en sección contacto</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate consequuntur ullam ab unde! Consequuntur nam incidunt voluptas, unde sunt quas, adipisci aperiam, quo recusandae placeat minus. Mollitia iusto sapiente quis.
+    </p>
 </body>
 </html>
